# movie-video-edit-script-project-

./: ..env.un~  .env.example  .env.local.example  .env_temp  .env~  .gitignore  .python-version  GEMINI.md  GITHUB_SECRETS.md  database.py  exceptions.py  local_database.sqlite3-shm  local_database.sqlite3-wal  logger.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  rufferror  test_db_connection.py  test_orm.py  tyerror.txt  type.py  utils.py
.github/workflows/: run_script.yml
db/: main.py
migrations/models/: 0_20250912104510_init.py
storage/: main.py  test_main.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_logger.py  test_main.py
