[project]
name = "movieedit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "aerich>=0.9.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "ffmpeg-python==0.2.0",
    "frozenlist==1.7.0",
    "future==1.0.0",
    "google-cloud-storage>=3.3.1",
    "idna==3.10",
    "imageio-ffmpeg==0.6.0",
    "libsql>=0.1.11",
    "libsql-client>=0.3.1",
    "multidict==6.6.4",
    "propcache==0.3.2",
    "psycopg>=3.2.9",
    "python-dotenv==1.1.1",
    "pytube==15.0.0",
    "pytubefix==9.4.1",
    "requests==2.32.5",
    "schedule==1.2.2",
    "tortoise-orm>=0.25.1",
    "turso-python>=1.8",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "yarl==1.20.1",
]

[tool.aerich]
tortoise_orm = "database.TORTOISE_ORM"
location = "migrations"
src_folder = "./."
